# advanced-python

./: index_20220531114917.php  pyproject.toml  username.txt
session_00_working_files/: hello_version.py  test_notebook.ipynb
session_01_working_files/: FF_header_footer_tiny.txt  nyse-listed_csv_tiny.csv  revenue.csv  revenue_ny.csv  solution_1.1.py  solution_1.2.py  solution_1.3.py  solution_1.4.py  solution_1.5.py  solution_1.6.py  solution_1.7.py  solution_1.8.py  sonnet_xv.txt  sonnet_xv_tiny.txt  weather_newyork_narrow.csv  weather_newyork_tiny.csv
session_02_working_files/: csv2sql.py  hw_solution_2.1.ipynb  hw_solution_2.2.ipynb  hw_solution_2.3.ipynb  revenue.csv  revenue_from_db.csv  session_2.db  solution_2.1.py  solution_2.2.py  solution_2.3.py  solution_2.4.py  weather_newyork.csv  weather_newyork_dod.json  weather_newyork_lod.json
session_03_working_files/: attrfile.csv  dormouse.html  la_vie.txt  nasa.html  solution_1.3.ipynb  solution_1.3.py  story_template.html  test.py  test_file.txt  test_scrape.html  virtual-reality-driverless-cars.html  wapo_virgin_galactic.html
session_04_working_files/: access_log.txt  congressional_record.txt  market_discussion.txt  solution_4.1.py  solution_4.2.py
session_05_working_files/: ip_routes_tiny.json  solution_5.1.py  solution_5.2.py  solution_5.3.py  sorted_file.csv  weny_dod_tiny.json  weny_lod_tiny.json
session_06_working_files/: class Zoo.py  solution_6.1.py  solution_6.2.py
session_07_working_files/: corrupted.csv  corrupted.ini  corrupted.json  dupekeys.csv  pconfig copy.csv  pconfig.ini  pconfig.json  (+5 more)
(+436 files in other folders)
