[tool.poetry]
name = "advanced-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.0"
black = "^22.3.0"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
