[tool.poetry]
name = "advanced-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.0"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"
pandas = "^1.4.3"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
mypy = "^0.971"
yapf = "^0.32.0"
black = {extras = ["jupyter"], version = "^22.6.0"}
matplotlib = "^3.5.2"
jupyterlab = "^3.4.5"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78